{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 210,
  "lineage": "6e27ef98-b738-5ca7-6814-ca75b1b0c337",
  "resources": [
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:security-group/sg-0f35739a8cbad4d1b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f35739a8cbad4d1b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dc21be492e11ffe5",
            "domain": "vpc",
            "id": "eipalloc-0d63159b7ce46885b",
            "network_interface": "eni-0d84397bc0bb16d90",
            "private_dns": "ip-10-10-0-175.us-east-2.compute.internal",
            "private_ip": "10.10.0.175",
            "public_dns": "ec2-3-129-83-66.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.83.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "near-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4ee0f926e9f568d",
            "arn": "arn:aws:ec2:us-east-2:468640258083:instance/i-0572108311988730c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0572108311988730c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "East2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05dfbd5cb094730aa",
            "private_dns": "ip-10-10-0-127.us-east-2.compute.internal",
            "private_ip": "10.10.0.127",
            "public_ip": "18.217.11.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-060da327ff5c7583e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04374e64ad006230a",
            "tags": {
              "Name": "near-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02287261fb59639ac"
            ]
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_security_group.full_node",
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_subnet.private",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_proxy",
      "mode": "managed",
      "type": "aws_instance",
      "name": "near_proxy",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4ee0f926e9f568d",
            "arn": "arn:aws:ec2:us-east-2:468640258083:instance/i-0bec5877b658ce337",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bec5877b658ce337",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "East2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0990c0501ada7cf92",
            "private_dns": "ip-10-10-0-135.us-east-2.compute.internal",
            "private_ip": "10.10.0.135",
            "public_ip": "18.191.212.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0f403affcf36953c7",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04374e64ad006230a",
            "tags": {
              "Name": "near-proxy-The Passive Trust"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040bfe8ba266421d9"
            ]
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_security_group.full_node",
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_subnet.private",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_validator",
      "mode": "managed",
      "type": "aws_instance",
      "name": "near_validator",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4ee0f926e9f568d",
            "arn": "arn:aws:ec2:us-east-2:468640258083:instance/i-083cc7f6ab7918e3a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083cc7f6ab7918e3a",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "East2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018c65214aa89be1b",
            "private_dns": "ip-10-10-1-155.us-east-2.compute.internal",
            "private_ip": "10.10.1.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0572ae2c324fb2516",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcddf24ee59bf877",
            "tags": {
              "Name": "near-validator-test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7e054f3279aa390"
            ]
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_security_group.full_node",
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_subnet.private",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:internet-gateway/igw-092765c872afff250",
            "id": "igw-092765c872afff250",
            "owner_id": "468640258083",
            "tags": {
              "Name": "near-internet-gateway"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d63159b7ce46885b",
            "id": "nat-0d10bf13ae8f53b91",
            "network_interface_id": "eni-0d84397bc0bb16d90",
            "private_ip": "10.10.0.175",
            "public_ip": "3.129.83.66",
            "subnet_id": "subnet-04374e64ad006230a",
            "tags": {
              "Name": "near-nat-gateway-use2-az1"
            }
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_eip.nat",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_private_subnet_1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:network-acl/acl-08b02934aeb14526d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08b02934aeb14526d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 5432
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0fcddf24ee59bf877"
            ],
            "tags": {
              "Name": "near-private-l-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:network-acl/acl-00e5e3bb82e9654a5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-00e5e3bb82e9654a5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 131,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 30303,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 30303
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "468640258083",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-04374e64ad006230a"
            ],
            "tags": {
              "Name": "near-public-l-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_private_subnet_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0daa34a3da6e9d5ed",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d10bf13ae8f53b91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "near-private-route-table-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_eip.nat",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_nat_gateway.nat",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-009e6afc7e324cd64",
            "owner_id": "468640258083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092765c872afff250",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "near-public-route-table-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_internet_gateway.igw",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_private_subnet_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edad38628f611afe",
            "route_table_id": "rtb-0daa34a3da6e9d5ed",
            "subnet_id": "subnet-0fcddf24ee59bf877"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_route_table.private",
            "module.near_cluster.module.near_vpc.module.near_private_subnet_1.aws_subnet.private",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_eip.nat",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_nat_gateway.nat",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f11b6af29393dda",
            "route_table_id": "rtb-009e6afc7e324cd64",
            "subnet_id": "subnet-04374e64ad006230a"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_internet_gateway.igw",
            "module.near_cluster.module.near_vpc.aws_vpc.near",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_route_table.public",
            "module.near_cluster.module.near_vpc.module.near_public_subnet_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:security-group/sg-02287261fb59639ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02287261fb59639ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "near-bastion",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "full_node",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:security-group/sg-06d9d408dc29bb07f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d9d408dc29bb07f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02287261fb59639ac"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "near-full-node",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:security-group/sg-040bfe8ba266421d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040bfe8ba266421d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3030
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9333
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02287261fb59639ac"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30503,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f7e054f3279aa390"
                ],
                "self": false,
                "to_port": 30503
              }
            ],
            "name": "near-proxy",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validator",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:security-group/sg-0f7e054f3279aa390",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7e054f3279aa390",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02287261fb59639ac"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040bfe8ba266421d9"
                ],
                "self": false,
                "to_port": 30303
              }
            ],
            "name": "near-validator",
            "name_prefix": null,
            "owner_id": "468640258083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_all_outbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3319251519",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_external_tcp_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-1700089436",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_external_udp_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-463121604",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_grafana_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3501800918",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_internal_ssh",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1932972695",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": "sg-02287261fb59639ac",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_near_node_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3030,
            "id": "sgrule-2717232797",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3030,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_near_prometheus_exporter_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9333,
            "id": "sgrule-2044158235",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9333,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_node_exporter_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-4245203673",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_prometheus_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9090,
            "id": "sgrule-2573474351",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_allow_validator_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 30503,
            "id": "sgrule-1932290594",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-040bfe8ba266421d9",
            "self": false,
            "source_security_group_id": "sg-0f7e054f3279aa390",
            "to_port": 30503,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_all_outbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-616753037",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f7e054f3279aa390",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_private_ssh",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3031142125",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f7e054f3279aa390",
            "self": false,
            "source_security_group_id": "sg-02287261fb59639ac",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.bastion",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "validator_allow_proxy_inbound",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 30303,
            "id": "sgrule-2681312702",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f7e054f3279aa390",
            "self": false,
            "source_security_group_id": "sg-040bfe8ba266421d9",
            "to_port": 30303,
            "type": "ingress"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_security_group.proxy",
            "module.near_cluster.module.near_vpc.aws_security_group.validator",
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:subnet/subnet-0fcddf24ee59bf877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0fcddf24ee59bf877",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "near-private-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc.module.near_public_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:subnet/subnet-04374e64ad006230a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-04374e64ad006230a",
            "map_public_ip_on_launch": false,
            "owner_id": "468640258083",
            "tags": {
              "Name": "near-public-use2-az1"
            },
            "vpc_id": "vpc-0461a14c96fb79ed2"
          },
          "dependencies": [
            "module.near_cluster.module.near_vpc.aws_vpc.near"
          ]
        }
      ]
    },
    {
      "module": "module.near_cluster.module.near_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "near",
      "provider": "module.near_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:468640258083:vpc/vpc-0461a14c96fb79ed2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-006b9a729634240f9",
            "default_route_table_id": "rtb-0a5ca6ab47c70e094",
            "default_security_group_id": "sg-0f35739a8cbad4d1b",
            "dhcp_options_id": "dopt-e974bf82",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0461a14c96fb79ed2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5ca6ab47c70e094",
            "owner_id": "468640258083",
            "tags": {
              "Name": "near-vpc"
            }
          }
        }
      ]
    }
  ]
}